--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection settings
 spring.datasource.url=jdbc:mysql://localhost:3306/cheese-mvc
 spring.datasource.username=cheese-mvc
-spring.datasource.password=cheese
+spring.datasource.password=D3vW0rk
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
